k8s-yamls/istio-gw-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ifconfig-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller, this selector is to select the pod running as the proxy.
  servers:
  - port:
      number: 80 # This port is istio-ingressgateway svc defined port. It will be used by Cloud load balance to send the traffic. for example 80. then 35.197.162.187:80 is svc address. 443 will be 35.197.162.187:443
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ifconfig-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - ifconfig-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /status
    route:
    - destination:
        host: ifconfig-svc
        port:
          number: 5000
