k8s-yamls/serviceEntry_httpstat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpstat
spec:
  hosts:
  - httpstat.us
  ports:
  - number: 80
    name: http
    protocol: HTTP
  # - number: 443
  #   name: https
  #   protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - httpstat.us
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-httpstat
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: httpstat
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-httpstat-through-egress-gateway
spec:
  hosts:
  - httpstat.us
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: httpstat
        port:
          number: 80
      weight: 100
   #retries:
     #attempts: 0
      # perTryTimeout: 2s
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: httpstat.us
        port:
          number: 80
      weight: 100
    #retries:
      #attempts: 0
      # perTryTimeout: 2s
